hphp/hack/test/typecheck/async_coroutine1.php.exp
File "async_coroutine1.php", line 4, characters 8-50:
Coroutine functions may not be async (Parsing[1002])
