hphp/hack/test/typecheck/async_coroutine1.php
<?hh // strict

function foo(): void {
  $x = async coroutine () ==> {
    return 42;
  };
}
